--- a/discover.css
+++ b/discover.css
@@ -40,15 +40,28 @@
 }
 
 .syllabus {
-  padding: 2em 0em;
+  padding: 0em;
 }
 
 .syllabus p {
   color: #333;
+  padding: 0.25em 0em;
 }
 
 .syllabus h3 {
   font-size: 1em;
+  margin-top: 1em;
+}
+
+.syllabus h1 {
+  margin-top: 1em;
+}
+
+.syllabus a {
+  margin: 0 auto;
+  display: block;
+  width: 10em;
+  margin-bottom: 2em;
   margin-top: 1em;
 }
 
