--- a/discover.css
+++ b/discover.css
@@ -9,6 +9,7 @@
 .header {
   padding: 0em 0em;
   display: flex;
+  flex-direction: column;
 }
 
 .brand {
@@ -22,7 +23,8 @@
 }
 
 .header .links {
-  margin-left: auto;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .top {
@@ -48,7 +50,7 @@
 }
 
 .syllabus {
-  padding: 0em;
+  padding: 0em 1em;
 }
 
 .syllabus p {
@@ -92,7 +94,14 @@
 
 
 @media screen and (min-width: 780px) {
+  .header {
+    flex-direction: row;
+  }
 
+  .header .links {
+    margin: 0;
+    margin-left: auto;
+  }
 }
 
 @media screen and (min-width: 1000px) {
